--- a/demo/src/main/res/layout/script_item.xml
+++ b/demo/src/main/res/layout/script_item.xml
@@ -22,31 +22,31 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@color/def"
-        android:text="@string/metric"
-        android:id="@+id/tv_metric_item_name"
+        android:text="@string/videoext"
+        android:id="@+id/tv_script_video"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="5dp"
         android:textStyle="bold"
-        android:layout_marginStart="20dp" />
+        android:layout_marginStart="25dp" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/type"
-        android:id="@+id/tv_metric_item_type"
-        android:layout_below="@+id/tv_metric_item_name"
-        android:layout_marginBottom="10dp"
-        android:layout_alignStart="@+id/tv_metric_item_name" />
+        android:text="@string/address"
+        android:id="@+id/tv_script_address"
+        android:layout_below="@+id/tv_script_video"
+        android:layout_marginBottom="5dp"
+        android:layout_alignStart="@+id/tv_script_video" />
 
     <CheckBox
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:clickable="false"
         android:focusable="false"
-        android:id="@+id/cb_metric_item_used"
-        android:layout_alignBottom="@+id/tv_metric_item_type"
+        android:id="@+id/cb_script_use_dash"
+        android:layout_alignBottom="@+id/tv_script_address"
         android:layout_alignParentEnd="true"
-        android:layout_marginEnd="20dp" />
+        android:layout_marginEnd="30dp" />
 
 </RelativeLayout>
