--- a/demo/src/main/res/drawable-xhdpi/circle.xml
+++ b/demo/src/main/res/drawable-xhdpi/circle.xml
@@ -98,7 +98,7 @@
     <item >
 
         <ripple xmlns:android="http://schemas.android.com/apk/res/android"
-            android:color="@color/def">
+            android:color="@color/darker">
             <item android:id="@android:id/mask">
                 <shape android:shape="oval">
                     <solid android:color="@color/def" />
